# allbs-tool-dock

./: .gitignore  CHANGELOG.md  Cargo.toml  NEW_TOOLS_SUMMARY.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-tcp-tool.md
.github/: RELEASE_TEMPLATE.md
.github/workflows/: auto-release.yml  ci.yml  prerelease.yml  release.yml  test-build.yml
apps/shell/: Cargo.toml  tauri.conf.json
apps/shell/icons/: README.md
apps/shell/src/: commands.rs  error.rs  main.rs  plugin_manager.rs
docs/: AUTO_RELEASE.md  DEVELOPMENT.md  ICONS.md  PROJECT_OVERVIEW.md  QUICK_RELEASE.md  RELEASE.md  RELEASE_ISSUES_FIXED.md  TROUBLESHOOTING.md
plugins/base64-tool/: Cargo.toml
plugins/base64-tool/src/: lib.rs
plugins/hash-tool/: Cargo.toml
plugins/hash-tool/src/: lib.rs
plugins/json-formatter/: Cargo.toml
plugins/json-formatter/src/: lib.rs
plugins/logger/: Cargo.toml
plugins/logger/src/: lib.rs
plugins/regex-tool/: Cargo.toml
plugins/regex-tool/src/: lib.rs
plugins/tcp-tool/: Cargo.toml
plugins/tcp-tool/src/: lib.rs
plugins/timestamp-tool/: Cargo.toml
plugins/timestamp-tool/src/: lib.rs
scripts/: bump-version.js  check-icons.js  check-release.js  create-plugin.js  create-ui.js  dev.js  generate-icons.js  install-imagemagick.js  release.js  setup.js  sync-version.js  test-auto-release.js  test-release.js
ui/shell/: index.html  package.json  tsconfig.json  uno.config.ts  vite.config.ts  vitest.config.ts
ui/shell/src/: App.vue  main.ts
ui/shell/src/components/__tests__/: basic.test.ts
ui/shell/src/components/tools/: base64-tool.vue  hash-tool.vue  json-formatter.vue  logger.vue  regex-tool.vue  tcp-tool.vue  timestamp-tool.vue
ui/shell/src/router/: index.ts
ui/shell/src/stores/: app.ts
ui/shell/src/types/: index.ts
ui/shell/src/utils/: env.ts
ui/shell/src/views/: DebugInfo.vue  Home.vue  Plugins.vue  Settings.vue  StyleDemo.vue  Tool.vue
ui/tool-base64-tool/: index.html  package.json  vite.config.ts
ui/tool-base64-tool/src/: App.vue  main.ts
ui/tool-base64-tool/src/components/: Base64ToolTool.vue
ui/tool-hash-tool/: index.html  package.json  vite.config.ts
ui/tool-hash-tool/src/: App.vue  main.ts
ui/tool-hash-tool/src/components/: HashToolTool.vue
ui/tool-json-formatter/: index.html  package.json  vite.config.ts
ui/tool-json-formatter/src/: App.vue  main.ts
ui/tool-json-formatter/src/components/: JsonFormatterTool.vue
ui/tool-regex-tool/: index.html  package.json  vite.config.ts
ui/tool-regex-tool/src/: App.vue  main.ts
ui/tool-regex-tool/src/components/: RegexToolTool.vue
ui/tool-tcp-tool/: index.html  package.json  vite.config.ts
ui/tool-tcp-tool/src/: App.vue  main.ts
ui/tool-tcp-tool/src/components/: ClientConnectDialog.vue  ServerStartDialog.vue  TcpToolTool.vue
ui/tool-timestamp-tool/: index.html  package.json  vite.config.ts
ui/tool-timestamp-tool/src/: App.vue  main.ts
ui/tool-timestamp-tool/src/components/: TimestampToolTool.vue
