[package]
name = "tauri-plugin-json-formatter"
version = "0.1.0"
description = "json-formatter plugin for KKAPE Gearbox"
authors = ["KKAPE Team"]
license = "MIT"
edition = "2021"

[dependencies]
# Tauri 插件框架
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# 日志
tracing = { workspace = true }

# 错误处理
anyhow = { workspace = true }
thiserror = { workspace = true }

# 异步运行时
tokio = { workspace = true }

[lib]
name = "tauri_plugin_json_formatter"
crate-type = ["cdylib", "rlib"]
