[package]
name = "tauri-plugin-tcp-tool"
version = "0.1.0"
description = "tcp-tool plugin for KKAPE Gearbox"
authors = ["KKAPE Team"]
license = "MIT"
edition = "2021"

[dependencies]
# Tauri 插件框架
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# 日志
tracing = { workspace = true }

# 错误处理
anyhow = { workspace = true }
thiserror = { workspace = true }

# 异步运行时
tokio = { workspace = true, features = ["net", "io-util", "time", "sync"] }

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

[lib]
name = "tauri_plugin_tcp_tool"
crate-type = ["cdylib", "rlib"]
